support subdecoders via sql path connectors